[tool.poetry]
name = "arakneed"
version = "0.1.0"
description = "A common use targeted concurrent crawler for any directed graph. It's designed to be easy to use."
authors = ["arakneed <arakneed@somarl.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
