[tool.poetry]
name = "arakneed"
version = "0.1.4"
description = "A common use targeted concurrent crawler for any directed graph. It's designed to be easy to use."
authors = ["arakneed <arakneed@somarl.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
wheel = "^0.36.2"
setuptools = "^57.0.0"
twine = "^3.4.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["setuptools >= 35.0.0", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"
